# antropomorphic_project

./: CMakeLists.txt  package.xml
launch/: start_elipsoidal_motion.launch
scripts/: antropomorphic_end_effector_mover.py  elipsoidal_motion.py  fk_antropomorphic_arm.py  generate_matrixes.py
src/antropomorphic_project/: generate_matrixes.py  ik_antropomorphic_arm.py
